--- a/src/app/styles/modules/login.css
+++ b/src/app/styles/modules/login.css
@@ -68,11 +68,14 @@
 }
 
 body {
-    background-image: url("../../images/background-image.jpg");
+    background: #70e1f5;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffd194, #70e1f5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ffd194, #70e1f5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+/*    background-image: url("../../images/background-image.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
-    background-size: cover;
+    background-size: cover;*/
 }
 
 .reset-password {
